# bark-rs

./: .gitignore  Cargo.toml  README.md
src/: api.rs  bark_gpt.rs  generation.rs  main.rs
src/model/: fine.rs  mod.rs
